2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/log.cpp' that caused newly inserted
	cart events to show a length value of '00:00'.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/transportbutton.cpp' that caused the
	Stop button to be the incorrect color.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Print' button to the Edit Log dialog.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in the report viewer under Windows.
	* Added a 'version.txt' to the Windows installation.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremeneted the package version to 1.1.0.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Implemented cart dragging in RDLibraryb(1).
	* Implemented cart dropping in RDLogEditb(1).
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in RDLogEditb(1) that caused start times to fail to be
	updated after inserting new events.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in RDLogEditb(1) that caused the incorrect icon to be
	displayed for macro carts when editing a log.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Added RDLibraryb(1) to the Windows installer.
2017-07-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.1.0int00.
2017-07-27 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.2.0.
2017-08-11 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'ALL' from the list of services in the 'Add New Log' and
	'Edit Log' dialogs.
2017-08-11 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that permitted logs to be created with names containing
	spaces.
2017-08-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in rdlogeditb(1) that caused insertion of new meta
	events to fail to be saved.
2017-08-31 Fred Gleason <fredg@paravelsystems.com>
	* Added support for the 'user_agent' field in the Rivendell-C-API.